crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__aggregate_destructuring_preserves_generalized_components.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nmain : (unit, bool)\nmain =\n    let\n        (identity, second) = (\\x -> x, \\x -> x)\n    in\n    (identity (), second True)\n"
---
--- unoptimized Core
let fromUnit#8 : unit -> unit = \value#17 : unit -> value#17 in
let fromBool#14 : bool -> bool = \value#18 : bool -> value#18 in
let destruct#2 : ('erased -> 'erased, 'erased -> 'erased) = constr 0 (\x#15 : 'erased -> x#15) (\x#16 : 'erased -> x#16) in
let match#5 : ('erased -> 'erased, 'erased -> 'erased) = destruct#2 in
let evaluated#19 : unit = (case@Tag match#5 of
  0 field#6 field#7 -> let identity#3 : 'erased -> 'erased = field#6 in
  let second#4 : 'erased -> 'erased = field#7 in
  identity#3) (fromUnit#8 ()) in
let match#11 : ('erased -> 'erased, 'erased -> 'erased) = destruct#2 in
let main#1 : (unit, bool) = constr 0 evaluated#19 ((case@Tag match#11 of
  0 field#12 field#13 -> let identity#9 : 'erased -> 'erased = field#12 in
  let second#10 : 'erased -> 'erased = field#13 in
  second#10) (fromBool#14 true)) in
main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromUnit_8
    [(lam fromBool_14
      [(lam destruct_2
        [(lam match_5
          [(lam evaluated_19
            [(lam match_11
              [(lam main_1 main_1)
                (constr 0
                  evaluated_19
                  [(case
                    match_11
                    (lam field_12
                      (lam field_13 [(lam identity_9 [(lam second_10 second_10) field_13]) field_12])))
                    [fromBool_14 (con bool True)]])])
              destruct_2])
            [(case
              match_5
              (lam field_6
                (lam field_7 [(lam identity_3 [(lam second_4 identity_3) field_7]) field_6])))
              [fromUnit_8 (con unit ())]]])
          destruct_2])
        (constr 0 (lam x_15 x_15) (lam x_16 x_16))])
      (lam value_18 value_18)])
    (lam value_17 value_17)])
--- optimized Core
constr 0 () true
--- optimized UPLC
(program 1.1.0 (constr 0 (con unit ()) (con bool True)))
--- result
(constr 0 (con unit ()) (con bool True))
--- logs
[]
--- budget
cpu: 928100, memory: 5900
