crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_constructor_pattern_and_access_share_the_constructor_decoder.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\ntype Datum = Datum { owner : Bytes, deadline : Int }\nmain : Datum -> (Bytes, Int)\nmain d = case d of Datum { owner } -> (owner, d.deadline)\n"
---
--- core
let main#1 : Main.Datum -> (Bytes, Int) = \d#2 : Main.Datum -> let match#6 : Main.Datum = d#2 in
let projection#13 : pair int (list Data) = unConstrData match#6 in
case@Pair projection#13 of
  Pair tag#9 fields#10 -> let fieldList#11 : list Data = fields#10 in
  let projection#14 : Data = headList fieldList#11 in
  let field#7 : Bytes = projection#14 in
  let projection#15 : list Data = tailList fieldList#11 in
  let fieldList#12 : list Data = projection#15 in
  let projection#16 : Data = headList fieldList#12 in
  let field#8 : Int = projection#16 in
  let owner#3 : Bytes = field#7 in
  constr 0 owner#3 projection#16 in
main#1
--- uplc
(program 1.1.0
  [(lam i0 i0)
    (lam i0
      [(lam i1
        [(lam i2
          (case
            i2
            (lam i3
              (lam i4
                [(lam i5
                  [(lam i6
                    [(lam i7
                      [(lam i8
                        [(lam i9
                          [(lam i10 [(lam i11 [(lam i12 (constr 0 i12 i10)) i7]) i10])
                            [(force (builtin headList)) i9]])
                          i8])
                        [(force (builtin tailList)) i5]])
                      i6])
                    [(force (builtin headList)) i5]])
                  i4]))))
          [(builtin unConstrData) i1]])
        i0])])
