crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_field_offsets_use_drop_list_from_two.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\ntype alias Record = { a : Int, b : Int, c : Int, d : Int }\nselect : Record -> (Int, Int, Int, Int, Int)\nselect record = (record.a, record.b, record.c, record.d, record.c)\nmain = select { a = 10, b = 20, c = 30, d = 40 }\n"
---
--- core
let select#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> (Int, Int, Int, Int, Int) = \record#4 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let projection#5 : list Data = unListData record#4 in
let projection#6 : Data = headList projection#5 in
let projection#7 : list Data = tailList projection#5 in
let projection#8 : Data = headList projection#7 in
let projection#9 : list Data = dropList 2 projection#5 in
let projection#10 : Data = headList projection#9 in
let projection#11 : list Data = dropList 3 projection#5 in
let projection#12 : Data = headList projection#11 in
constr 0 projection#6 projection#8 projection#10 projection#12 projection#10 in
let fromInt#3 : int -> Int = iData in
let main#1 : (Int, Int, Int, Int, Int) = select#2 (listData (mkCons (fromInt#3 10) (mkCons (fromInt#3 20) (mkCons (fromInt#3 30) (mkCons (fromInt#3 40) (con (list data) [])))))) in
main#1
--- uplc
(program 1.1.0
  [(lam select_2
    [(lam fromInt_3
      [(lam main_1 main_1)
        [select_2
          [(builtin listData)
            [[(force (builtin mkCons)) [fromInt_3 (con integer 10)]]
              [[(force (builtin mkCons)) [fromInt_3 (con integer 20)]]
                [[(force (builtin mkCons)) [fromInt_3 (con integer 30)]]
                  [[(force (builtin mkCons)) [fromInt_3 (con integer 40)]] (con (list data) [])]]]]]]])
      (builtin iData)])
    (lam record_4
      [(lam projection_5
        [(lam projection_6
          [(lam projection_7
            [(lam projection_8
              [(lam projection_9
                [(lam projection_10
                  [(lam projection_11
                    [(lam projection_12
                      (constr 0 projection_6 projection_8 projection_10 projection_12 projection_10))
                      [(force (builtin headList)) projection_11]])
                    [[(force (builtin dropList)) (con integer 3)] projection_5]])
                  [(force (builtin headList)) projection_9]])
                [[(force (builtin dropList)) (con integer 2)] projection_5]])
              [(force (builtin headList)) projection_7]])
            [(force (builtin tailList)) projection_5]])
          [(force (builtin headList)) projection_5]])
        [(builtin unListData) record_4]])])
--- result
(constr 0
  (con data (I 10))
  (con data (I 20))
  (con data (I 30))
  (con data (I 40))
  (con data (I 30)))
--- logs
[]
--- budget
cpu: 2651999, memory: 10488
