crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_record_and_labeled_constructor_keep_distinct_layouts.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Eq exposing (..)\ntype alias Record = { owner : Bytes, count : Int }\ntype Datum = Datum { owner : Bytes, count : Int }\nrecord : Record\nrecord = { owner = #\"aa\", count = 1 }\ndatum : Datum\ndatum = Datum { owner = #\"bb\", count = 2 }\nmain = neq record.count datum.count\n"
---
--- unoptimized Core
let not#17 : 'erased -> bool = \value#22 : 'erased -> case@Bool (\identity#23 : bool -> identity#23) value#22 of
  True -> false
  False -> true in
let neq#2 : 'erased -> 'erased -> bool = \a#15 : 'erased b#16 : 'erased -> not#17 (equalsData a#15 b#16) in
let fromBytes#18 : bytes -> Bytes = bData in
let fromInt#19 : int -> Int = iData in
let record#3 : { _0 : Bytes, _1 : Int } = listData (mkCons (fromBytes#18 (con bytestring #aa)) (mkCons (fromInt#19 1) (con (list data) []))) in
let datum#8 : Main.Datum = (\field#20 : Bytes field#21 : Int -> constrData 0 (mkCons field#20 (mkCons field#21 (con (list data) [])))) (fromBytes#18 (con bytestring #bb)) (fromInt#19 2) in
let projection#24 : list Data = unListData record#3 in
case@List projection#24 of
  Cons head#4 tail#5 -> case@List tail#5 of
    Cons head#6 tail#7 -> let projection#25 : pair int (list Data) = unConstrData datum#8 in
    case@Pair projection#25 of
      Pair tag#9 fields#10 -> case@List fields#10 of
        Cons head#11 tail#12 -> case@List tail#12 of
          Cons head#13 tail#14 -> let main#1 : bool = neq#2 head#6 head#13 in
          main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam not_17
    [(lam neq_2
      [(lam fromBytes_18
        [(lam fromInt_19
          [(lam record_3
            [(lam datum_8
              [(lam projection_24
                (case
                  projection_24
                  (lam head_4
                    (lam tail_5
                      (case
                        tail_5
                        (lam head_6
                          (lam tail_7
                            [(lam projection_25
                              (case
                                projection_25
                                (lam tag_9
                                  (lam fields_10
                                    (case
                                      fields_10
                                      (lam head_11
                                        (lam tail_12
                                          (case
                                            tail_12
                                            (lam head_13 (lam tail_14 [(lam main_1 main_1) [[neq_2 head_6] head_13]]))
                                            (error))))
                                      (error))))))
                              [(builtin unConstrData) datum_8]]))
                        (error))))
                  (error)))
                [(builtin unListData) record_3]])
              [[(lam field_20
                (lam field_21
                  [[(builtin constrData) (con integer 0)]
                    [[(force (builtin mkCons)) field_20]
                      [[(force (builtin mkCons)) field_21] (con (list data) [])]]]))
                [fromBytes_18 (con bytestring #bb)]]
                [fromInt_19 (con integer 2)]]])
            [(builtin listData)
              [[(force (builtin mkCons)) [fromBytes_18 (con bytestring #aa)]]
                [[(force (builtin mkCons)) [fromInt_19 (con integer 1)]] (con (list data) [])]]]])
          (builtin iData)])
        (builtin bData)])
      (lam a_15 (lam b_16 [not_17 [[(builtin equalsData) a_15] b_16]]))])
    (lam value_22
      (case [(lam identity_23 identity_23) value_22] (con bool True) (con bool False)))])
--- optimized Core
let fromBytes#32 : bytes -> Bytes = bData in
let fromInt#33 : int -> Int = iData in
let anf#53 : Bytes = fromBytes#32 (con bytestring #aa) in
let anf#54 : Int = fromInt#33 1 in
let anf#55 : list Data = mkCons anf#54 (con (list data) []) in
let anf#56 : list Data = mkCons anf#53 anf#55 in
let record#34 : { _0 : Bytes, _1 : Int } = listData anf#56 in
let anf#59 : Bytes = fromBytes#32 (con bytestring #bb) in
let anf#61 : Int = fromInt#33 2 in
let anf#57 : list Data = mkCons anf#61 (con (list data) []) in
let anf#58 : list Data = mkCons anf#59 anf#57 in
let datum#37 : Main.Datum = constrData 0 anf#58 in
let projection#38 : list Data = unListData record#34 in
case@List projection#38 of
  Cons head#39 tail#40 -> case@List tail#40 of
    Cons head#41 tail#42 -> let projection#43 : pair int (list Data) = unConstrData datum#37 in
    let anf#52 : bool = equalsData head#41 anf#61 in
    case@Bool anf#52 of
      True -> false
      False -> true
--- optimized UPLC
(program 1.1.0
  [(lam builtin_20
    [(lam fromBytes_1
      [(lam fromInt_2
        [(lam anf_3
          [(lam anf_4
            [(lam anf_5
              [(lam anf_6
                [(lam record_7
                  [(lam anf_8
                    [(lam anf_9
                      [(lam anf_10
                        [(lam anf_11
                          [(lam datum_12
                            [(lam projection_13
                              (case
                                projection_13
                                (lam head_14
                                  (lam tail_15
                                    (case
                                      tail_15
                                      (lam head_16
                                        (lam tail_17
                                          [(lam projection_18
                                            [(lam anf_19 (case anf_19 (con bool True) (con bool False)))
                                              [[(builtin equalsData) head_16] anf_9]])
                                            [(builtin unConstrData) datum_12]]))
                                      (error))))
                                (error)))
                              [(builtin unListData) record_7]])
                            [[(builtin constrData) (con integer 0)] anf_11]])
                          [[builtin_20 anf_8] anf_10]])
                        [[builtin_20 anf_9] (con (list data) [])]])
                      [fromInt_2 (con integer 2)]])
                    [fromBytes_1 (con bytestring #bb)]])
                  [(builtin listData) anf_6]])
                [[builtin_20 anf_3] anf_5]])
              [[builtin_20 anf_4] (con (list data) [])]])
            [fromInt_2 (con integer 1)]])
          [fromBytes_1 (con bytestring #aa)]])
        (builtin iData)])
      (builtin bData)])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 3243579, memory: 11485
