crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_record_update_all_does_not_decode_base.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int }\nreplace : Record -> Record\nreplace r = { r | a = (trace \"first\" 10), b = (trace \"second\" 20) }\nmain = Builtin.unIData (replace (Primitive.coerce ())).b\n"
---
--- core
let message#13 : string = "first" in
let message#14 : string = "second" in
let fromInt#6 : int -> Int = iData in
let fromString#7 : string -> string = \value#8 : string -> value#8 in
let replace#2 : { _0 : Int, _1 : Int } -> { _0 : Int, _1 : Int } = \r#4 : { _0 : Int, _1 : Int } -> let base#5 : { _0 : Int, _1 : Int } = r#4 in
listData (mkCons (trace (fromString#7 message#13) in fromInt#6 10) (mkCons (trace (fromString#7 message#14) in fromInt#6 20) (con (list data) []))) in
let evaluated#9 : 'erased = replace#2 ((\coerce#3 : 'erased -> coerce#3) ()) in
let projection#10 : list Data = unListData evaluated#9 in
let projection#11 : list Data = tailList projection#10 in
let projection#12 : Data = headList projection#11 in
let main#1 : int = unIData projection#12 in
main#1
--- uplc
(program 1.1.0
  [(lam message_13
    [(lam message_14
      [(lam fromInt_6
        [(lam fromString_7
          [(lam replace_2
            [(lam evaluated_9
              [(lam projection_10
                [(lam projection_11
                  [(lam projection_12 [(lam main_1 main_1) [(builtin unIData) projection_12]])
                    [(force (builtin headList)) projection_11]])
                  [(force (builtin tailList)) projection_10]])
                [(builtin unListData) evaluated_9]])
              [replace_2 [(lam coerce_3 coerce_3) (con unit ())]]])
            (lam r_4
              [(lam base_5
                [(builtin listData)
                  [[(force (builtin mkCons))
                    (force
                      [[(force (builtin trace)) [fromString_7 message_13]]
                        (delay [fromInt_6 (con integer 10)])])]
                    [[(force (builtin mkCons))
                      (force
                        [[(force (builtin trace)) [fromString_7 message_14]]
                          (delay [fromInt_6 (con integer 20)])])]
                      (con (list data) [])]]])
                r_4])])
          (lam value_8 value_8)])
        (builtin iData)])
      (con string "second")])
    (con string "first")])
--- result
(con integer 20)
--- logs
["first", "second"]
--- budget
cpu: 1915760, memory: 9052
