crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_record_update_all_rebuilds_fields.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int, c : Int, d : Int }\nreplace : Record -> Record\nreplace r = { r | a = 10, b = 20, c = 30, d = 40 }\ntotal : Record -> int\ntotal r = Builtin.addInteger (Builtin.unIData r.a)\n    (Builtin.addInteger (Builtin.unIData r.b)\n        (Builtin.addInteger (Builtin.unIData r.c) (Builtin.unIData r.d)))\nmain = total (replace { a = 1, b = 2, c = 3, d = 4 })\n"
---
--- core
let total#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> int = \r#5 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let projection#18 : list Data = unListData r#5 in
case@List projection#18 of
  Cons head#6 tail#7 -> let evaluated#21 : 'erased = unIData head#6 in
  case@List tail#7 of
    Cons head#10 tail#11 -> let evaluated#20 : 'erased = unIData head#10 in
    case@List tail#11 of
      Cons head#12 tail#13 -> let evaluated#19 : 'erased = unIData head#12 in
      case@List tail#13 of
        Cons head#14 tail#15 -> addInteger evaluated#21 (addInteger evaluated#20 (addInteger evaluated#19 (unIData head#14))) in
let fromInt#4 : int -> Int = iData in
let replace#3 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = \r#16 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let base#17 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = r#16 in
listData (mkCons (fromInt#4 10) (mkCons (fromInt#4 20) (mkCons (fromInt#4 30) (mkCons (fromInt#4 40) (con (list data) []))))) in
let main#1 : int = total#2 (replace#3 (listData (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (mkCons (fromInt#4 4) (con (list data) []))))))) in
main#1
--- uplc
(program 1.1.0
  [(lam total_2
    [(lam fromInt_4
      [(lam replace_3
        [(lam main_1 main_1)
          [total_2
            [replace_3
              [(builtin listData)
                [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                  [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]] (con (list data) [])]]]]]]]])
        (lam r_16
          [(lam base_17
            [(builtin listData)
              [[(force (builtin mkCons)) [fromInt_4 (con integer 10)]]
                [[(force (builtin mkCons)) [fromInt_4 (con integer 20)]]
                  [[(force (builtin mkCons)) [fromInt_4 (con integer 30)]]
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 40)]] (con (list data) [])]]]]])
            r_16])])
      (builtin iData)])
    (lam r_5
      [(lam projection_18
        (case
          projection_18
          (lam head_6
            (lam tail_7
              [(lam evaluated_21
                (case
                  tail_7
                  (lam head_10
                    (lam tail_11
                      [(lam evaluated_20
                        (case
                          tail_11
                          (lam head_12
                            (lam tail_13
                              [(lam evaluated_19
                                (case
                                  tail_13
                                  (lam head_14
                                    (lam tail_15
                                      [[(builtin addInteger) evaluated_21]
                                        [[(builtin addInteger) evaluated_20]
                                          [[(builtin addInteger) evaluated_19] [(builtin unIData) head_14]]]]))
                                  (error)))
                                [(builtin unIData) head_12]]))
                          (error)))
                        [(builtin unIData) head_10]]))
                  (error)))
                [(builtin unIData) head_6]]))
          (error)))
        [(builtin unListData) r_5]])])
--- result
(con integer 100)
--- logs
[]
--- budget
cpu: 3293625, memory: 14042
