crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_record_update_does_not_validate_unchanged_suffix.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int }\noriginal : Record\noriginal = Primitive.coerce (Builtin.listData [Builtin.iData 1])\nmain = Builtin.equalsData\n    (Primitive.coerce { original | a = 10 })\n    (Primitive.coerce (Builtin.listData [Builtin.iData 10]))\n"
---
--- unoptimized Core
let fromInt#9 : int -> int = \value#11 : int -> value#11 in
let original#3 : { _0 : Int, _1 : Int } = (\coerce#10 : List Int -> coerce#10) (listData (mkCons (iData (fromInt#9 1)) (con (list data) []))) in
let fromInt#5 : int -> Int = iData in
let base#4 : { _0 : Int, _1 : Int } = original#3 in
let evaluated#13 : Int = fromInt#5 10 in
let projection#12 : list Data = unListData base#4 in
case@List projection#12 of
  Cons head#6 tail#7 -> let main#1 : bool = equalsData ((\coerce#2 : { _0 : Int, _1 : Int } -> coerce#2) (listData (mkCons evaluated#13 tail#7))) ((\coerce#8 : List Int -> coerce#8) (listData (mkCons (iData (fromInt#9 10)) (con (list data) [])))) in
  main#1
--- unoptimized UPLC
(program 1.1.0
  [(lam fromInt_9
    [(lam original_3
      [(lam fromInt_5
        [(lam base_4
          [(lam evaluated_13
            [(lam projection_12
              (case
                projection_12
                (lam head_6
                  (lam tail_7
                    [(lam main_1 main_1)
                      [[(builtin equalsData)
                        [(lam coerce_2 coerce_2)
                          [(builtin listData) [[(force (builtin mkCons)) evaluated_13] tail_7]]]]
                        [(lam coerce_8 coerce_8)
                          [(builtin listData)
                            [[(force (builtin mkCons)) [(builtin iData) [fromInt_9 (con integer 10)]]]
                              (con (list data) [])]]]]]))
                (error)))
              [(builtin unListData) base_4]])
            [fromInt_5 (con integer 10)]])
          original_3])
        (builtin iData)])
      [(lam coerce_10 coerce_10)
        [(builtin listData)
          [[(force (builtin mkCons)) [(builtin iData) [fromInt_9 (con integer 1)]]]
            (con (list data) [])]]]])
    (lam value_11 value_11)])
--- optimized Core
let evaluated#20 : Int = iData 10 in
let anf#31 : list Data = mkCons evaluated#20 (con (list data) []) in
let anf#32 : { _0 : Int, _1 : Int } = listData anf#31 in
equalsData anf#32 (con data (List [I 10]))
--- optimized UPLC
(program 1.1.0
  [(lam builtin_4
    [(lam evaluated_1
      [(lam anf_2
        [(lam anf_3 [[(builtin equalsData) anf_3] (con data (List [I 10]))])
          [(builtin listData) anf_2]])
        [[builtin_4 evaluated_1] (con (list data) [])]])
      [(builtin iData) (con integer 10)]])
    (force (builtin mkCons))])
--- result
(con bool True)
--- logs
[]
--- budget
cpu: 2718231, memory: 7821
