crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_record_update_first_shares_unchanged_suffix.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int, c : Int, d : Int }\nreplace : Record -> Record\nreplace r = { r | a = (trace \"replace\" 10) }\ntotal : Record -> int\ntotal r = Builtin.addInteger (Builtin.unIData r.a)\n    (Builtin.addInteger (Builtin.unIData r.b)\n        (Builtin.addInteger (Builtin.unIData r.c) (Builtin.unIData r.d)))\nmain = total (replace { a = 1, b = 2, c = 3, d = 4 })\n"
---
--- core
let message#24 : string = "replace" in
let total#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> int = \r#5 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let projection#10 : list Data = unListData r#5 in
let projection#11 : Data = headList projection#10 in
let evaluated#20 : 'erased = unIData projection#11 in
let projection#12 : list Data = tailList projection#10 in
let projection#13 : Data = headList projection#12 in
let evaluated#19 : 'erased = unIData projection#13 in
let projection#14 : list Data = tailList projection#12 in
let projection#15 : Data = headList projection#14 in
let evaluated#18 : 'erased = unIData projection#15 in
let projection#16 : list Data = tailList projection#14 in
let projection#17 : Data = headList projection#16 in
addInteger evaluated#20 (addInteger evaluated#19 (addInteger evaluated#18 (unIData projection#17))) in
let fromInt#4 : int -> Int = iData in
let fromString#8 : string -> string = \value#9 : string -> value#9 in
let replace#3 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = \r#6 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let base#7 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = r#6 in
let evaluated#23 : 'erased = trace (fromString#8 message#24) in fromInt#4 10 in
let projection#21 : list Data = unListData base#7 in
let projection#22 : list Data = tailList projection#21 in
listData (mkCons evaluated#23 projection#22) in
let main#1 : int = total#2 (replace#3 (listData (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (mkCons (fromInt#4 4) (con (list data) []))))))) in
main#1
--- uplc
(program 1.1.0
  [(lam message_24
    [(lam total_2
      [(lam fromInt_4
        [(lam fromString_8
          [(lam replace_3
            [(lam main_1 main_1)
              [total_2
                [replace_3
                  [(builtin listData)
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]] (con (list data) [])]]]]]]]])
            (lam r_6
              [(lam base_7
                [(lam evaluated_23
                  [(lam projection_21
                    [(lam projection_22
                      [(builtin listData) [[(force (builtin mkCons)) evaluated_23] projection_22]])
                      [(force (builtin tailList)) projection_21]])
                    [(builtin unListData) base_7]])
                  (force
                    [[(force (builtin trace)) [fromString_8 message_24]]
                      (delay [fromInt_4 (con integer 10)])])])
                r_6])])
          (lam value_9 value_9)])
        (builtin iData)])
      (lam r_5
        [(lam projection_10
          [(lam projection_11
            [(lam evaluated_20
              [(lam projection_12
                [(lam projection_13
                  [(lam evaluated_19
                    [(lam projection_14
                      [(lam projection_15
                        [(lam evaluated_18
                          [(lam projection_16
                            [(lam projection_17
                              [[(builtin addInteger) evaluated_20]
                                [[(builtin addInteger) evaluated_19]
                                  [[(builtin addInteger) evaluated_18] [(builtin unIData) projection_17]]]])
                              [(force (builtin headList)) projection_16]])
                            [(force (builtin tailList)) projection_14]])
                          [(builtin unIData) projection_15]])
                        [(force (builtin headList)) projection_14]])
                      [(force (builtin tailList)) projection_12]])
                    [(builtin unIData) projection_13]])
                  [(force (builtin headList)) projection_12]])
                [(force (builtin tailList)) projection_10]])
              [(builtin unIData) projection_11]])
            [(force (builtin headList)) projection_10]])
          [(builtin unListData) r_5]])])
    (con string "replace")])
--- result
(con integer 19)
--- logs
["replace"]
--- budget
cpu: 4335325, memory: 17670
