crates/nash-codegen/src/build/snapshots/nash_codegen__build__tests__big_record_update_last_rebuilds_fields.snap
---
source: crates/nash-codegen/src/build/tests.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin\ntype alias Record = { a : Int, b : Int, c : Int, d : Int }\nreplace : Record -> Record\nreplace r = { r | d = (trace \"replace\" 40) }\ntotal : Record -> int\ntotal r = Builtin.addInteger (Builtin.unIData r.a)\n    (Builtin.addInteger (Builtin.unIData r.b)\n        (Builtin.addInteger (Builtin.unIData r.c) (Builtin.unIData r.d)))\nmain = total (replace { a = 1, b = 2, c = 3, d = 4 })\n"
---
--- core
let message#33 : string = "replace" in
let total#2 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> int = \r#5 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let projection#28 : list Data = unListData r#5 in
case@List projection#28 of
  Cons head#6 tail#7 -> let evaluated#31 : 'erased = unIData head#6 in
  case@List tail#7 of
    Cons head#10 tail#11 -> let evaluated#30 : 'erased = unIData head#10 in
    case@List tail#11 of
      Cons head#12 tail#13 -> let evaluated#29 : 'erased = unIData head#12 in
      case@List tail#13 of
        Cons head#14 tail#15 -> addInteger evaluated#31 (addInteger evaluated#30 (addInteger evaluated#29 (unIData head#14))) in
let fromInt#4 : int -> Int = iData in
let fromString#26 : string -> string = \value#27 : string -> value#27 in
let replace#3 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = \r#16 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } -> let base#17 : { _0 : Int, _1 : Int, _2 : Int, _3 : Int } = r#16 in
let projection#32 : list Data = unListData base#17 in
case@List projection#32 of
  Cons head#18 tail#19 -> case@List tail#19 of
    Cons head#22 tail#23 -> case@List tail#23 of
      Cons head#24 tail#25 -> listData (mkCons head#18 (mkCons head#22 (mkCons head#24 (mkCons (trace (fromString#26 message#33) in fromInt#4 40) (con (list data) []))))) in
let main#1 : int = total#2 (replace#3 (listData (mkCons (fromInt#4 1) (mkCons (fromInt#4 2) (mkCons (fromInt#4 3) (mkCons (fromInt#4 4) (con (list data) []))))))) in
main#1
--- uplc
(program 1.1.0
  [(lam message_33
    [(lam total_2
      [(lam fromInt_4
        [(lam fromString_26
          [(lam replace_3
            [(lam main_1 main_1)
              [total_2
                [replace_3
                  [(builtin listData)
                    [[(force (builtin mkCons)) [fromInt_4 (con integer 1)]]
                      [[(force (builtin mkCons)) [fromInt_4 (con integer 2)]]
                        [[(force (builtin mkCons)) [fromInt_4 (con integer 3)]]
                          [[(force (builtin mkCons)) [fromInt_4 (con integer 4)]] (con (list data) [])]]]]]]]])
            (lam r_16
              [(lam base_17
                [(lam projection_32
                  (case
                    projection_32
                    (lam head_18
                      (lam tail_19
                        (case
                          tail_19
                          (lam head_22
                            (lam tail_23
                              (case
                                tail_23
                                (lam head_24
                                  (lam tail_25
                                    [(builtin listData)
                                      [[(force (builtin mkCons)) head_18]
                                        [[(force (builtin mkCons)) head_22]
                                          [[(force (builtin mkCons)) head_24]
                                            [[(force (builtin mkCons))
                                              (force
                                                [[(force (builtin trace)) [fromString_26 message_33]]
                                                  (delay [fromInt_4 (con integer 40)])])]
                                              (con (list data) [])]]]]]))
                                (error))))
                          (error))))
                    (error)))
                  [(builtin unListData) base_17]])
                r_16])])
          (lam value_27 value_27)])
        (builtin iData)])
      (lam r_5
        [(lam projection_28
          (case
            projection_28
            (lam head_6
              (lam tail_7
                [(lam evaluated_31
                  (case
                    tail_7
                    (lam head_10
                      (lam tail_11
                        [(lam evaluated_30
                          (case
                            tail_11
                            (lam head_12
                              (lam tail_13
                                [(lam evaluated_29
                                  (case
                                    tail_13
                                    (lam head_14
                                      (lam tail_15
                                        [[(builtin addInteger) evaluated_31]
                                          [[(builtin addInteger) evaluated_30]
                                            [[(builtin addInteger) evaluated_29] [(builtin unIData) head_14]]]]))
                                    (error)))
                                  [(builtin unIData) head_12]]))
                            (error)))
                          [(builtin unIData) head_10]]))
                    (error)))
                  [(builtin unIData) head_6]]))
            (error)))
          [(builtin unListData) r_5]])])
    (con string "replace")])
--- result
(con integer 46)
--- logs
["replace"]
--- budget
cpu: 3765159, memory: 16710
